# home-finance-assistant

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: poll.yml
src/expenses/: __main__.py  config.py  core.py  models.py  prompts.py  telegram_processor.py
src/expenses/bank_statements/: llm.py  multimodal.py  parser.py  pdf.py
src/expenses/llm/: client.py  parser.py
src/expenses/receipts/: llm.py
src/expenses/text_messages/: llm.py
tests/: conftest.py
tests/acceptance/: conftest.py  test_prompts_image.py  test_prompts_statement.py  test_prompts_text.py  test_reconciliation.py  test_sheets.py  test_telegram.py
tests/unit/: test_core_routing.py  test_models.py  test_sheet_adapter.py  test_sheets_writer.py  test_telegram_processor.py
