[project]
name = "home-finance-assistant"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "typer>=0.12",
    "pydantic>=2",
    "pydantic-settings>=2",
    "instructor>=1.4",
    "anthropic>=0.30",
    "openai>=1.40",
    "google-generativeai>=0.7",
    "google-api-python-client>=2.140",
    "google-auth>=2.32",
    "pdfplumber>=0.11",
    "Pillow>=10",
    "fastapi>=0.112",
    "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-mock>=3",
    "respx>=0.21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/expenses"]

[tool.pytest.ini_options]
testpaths = ["tests"]
